# YouTube-Clipper

./: .gitignore  LICENSE  MISSION.md  PROFILE.md  README.md  llm.txt
apps/daemon/: README.md  pyproject.toml
apps/daemon/tests/: conftest.py
apps/daemon/tests/integration/: test_api_smoke.py
apps/daemon/tests/unit/: test_adapters.py  test_config.py  test_logging.py  test_models.py  test_slug.py  test_stage_01_resolve.py  test_stage_02_download.py  test_stage_03_normalize.py  test_stage_04_transcribe.py  test_stage_05_summarize.py  test_stage_06_write_note.py  test_subprocess.py  test_website.py
apps/daemon/youtube_clipper/: config.py  logging.py  models.py  slug.py
apps/daemon/youtube_clipper/adapters/: azure_foundry.py  base.py  ollama.py  qwen.py
apps/daemon/youtube_clipper/api/: app.py  routes_clip.py  routes_health.py  routes_website.py  ws_events.py
apps/daemon/youtube_clipper/pipeline/: context.py  note_template.md.j2  runner.py  stage_01_resolve.py  stage_02_download.py  stage_03_normalize.py  stage_04_transcribe.py  stage_05_summarize.py  stage_06_write_note.py
apps/daemon/youtube_clipper/util/: raw_log.py  subprocess_async.py
apps/daemon/youtube_clipper/website/: builder.py  template.html.j2
apps/extension/: manifest.json  package-lock.json  package.json  tsconfig.json
apps/extension/scripts/: build.mjs  clean.mjs
config/: .secrets.env.example  config.toml
docs/: runbook.md
docs/plans/: 2026-05-17-implementation-plan.md
docs/specs/: 2026-05-17-design.md
scripts/: doctor.ps1  install.ps1  start-daemon.ps1  stop-daemon.ps1
(+10 files in other folders)
